--- a/todolist.html
+++ b/todolist.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>todo-list</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Lexend+Exa:wght@600&display=swap');
+  </style>
+  <title>Primeiro Projeto</title>
 </head>
+
 <body>
-    <div class="todo">
-        <div class="todo__title">
-            TODO - LIST
-        </div>
 
-        <div class="todo__list">
-            <label class="todo__item">
-                <input type="checkbox">
-                <div>teste de item 1</div>
-                <input type="button" value="X">
-            </label>
-            <label class="todo__item">
-                <input type="checkbox">
-                <div>teste de item 2</div>
-                <input type="button" value="X">
-            </label>
-        </div>
+  <header>
+    <nav>
+      <a class="logo" href="#">
+        <h1>My Projects</h1>
+      </a>
 
-        <div class="todo__new-item">
-            <div>&and;</div>
-            <input type="text" placeholder="Digite e pressione enter para adicionar a tarefa">
-            <div>&and;</div>
-        </div>
+      <div class="mobile-menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+
+      <ul class="nav-list">
+        <li><a href=""> Inicio</a></li>
+        <li><a href=""> Sobre</a></li>
+        <li><a href=""> Projetos</a></li>
+        <li><a href=""> Contatos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="todo">
+    <div class="todo__title">
+      Todo - LIST
     </div>
-    <script src="app.js"></script>
+
+    <div class="todo__list" id='todoList'></div>
+
+    <div class="todo__new-item">
+      <input type="text" id='newItem' placeholder="Digite e pressione enter para adicionar a tarefa">
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
+
 </html>
