Adicionei um botão enviar para celulares

--- a/todolist.html
+++ b/todolist.html
@@ -43,7 +43,8 @@
     <div class="todo__list" id='todoList'></div>
 
     <div class="todo__new-item">
-      <input type="text" id='newItem' placeholder="Digite e pressione enter para adicionar a tarefa">
+      <input type="text" id='newItem' placeholder="Digite sua tarefa aqui!">
+      <input type="button" id='enviar' value="ENVIAR">
     </div>
   </div>
   <script src="script.js"></script>
