Botão mobile terminado; scroll adicionada

--- a/todolist.html
+++ b/todolist.html
@@ -44,7 +44,7 @@
 
     <div class="todo__new-item">
       <input type="text" id='newItem' placeholder="Digite sua tarefa aqui!">
-      <input type="button" id='enviar' value="ENVIAR">
+      <input type="button" id='enviar' value="ENVIAR" onclick="enviarItem()">
     </div>
   </div>
   <script src="script.js"></script>
